projects/examples/source/02.36.cpp
////////////////////////////////////////////////////////////////

#include <tuple>
#include <type_traits>

////////////////////////////////////////////////////////////////

[[nodiscard]] auto test(int x);

////////////////////////////////////////////////////////////////

[[nodiscard]] auto test(int x)
{
	return x;
}

////////////////////////////////////////////////////////////////

int main()
{
    static_assert(std::is_same_v < decltype(test), int(int) > );

//  ------------------------------------------------------------

//	test(1); // error

//  ------------------------------------------------------------

    [[maybe_unused]] auto x = test(1);

//  ------------------------------------------------------------

    std::ignore = test(1);
}

////////////////////////////////////////////////////////////////